--- a/TP2/EntregaFinal/css/css.css
+++ b/TP2/EntregaFinal/css/css.css
@@ -31,9 +31,17 @@
 
 
     .nabvar-hamburguesa {
-        background-color: #622D6B;
         width: 5%;
-        height: 1.6rem;
+        height: 3rem;
+        padding: 5px 20px 0px 20px;
+
+        .nav-link-hamb {
+
+            .nav-img-hamburguesa {
+                width: 25px;
+                height: 40px;
+            }
+        }
     }
 
     .navbar-contenedor-logo {
@@ -64,14 +72,42 @@
         width: 28%;
         margin-right: 10%;
         /* Buscar otra forma de espaciar */
+        display: flex;
+
+        .nav-div-input {
+            width: 90%;
+            padding-left: 5%;
+        }
+
+        .nav-inputText {
+            width: 100%;
+            height: 2rem;
+            background-color: var(--black-background-);
+            border: 2px solid black;
+        }
+
+        .nav-divLupa {
+            margin-left: 10px;
+        }
     }
 
     .conteiner-user {
-        background-color: aliceblue;
-        height: 30px;
-        width: 5%;
         margin-right: 2%;
         margin-left: 10%;
+        width: 110px;
+
+        .btn-sesion {
+            width: 100%;
+            height: 35px;
+            border-radius: 30px;
+            background-color: var(--primary-color);
+
+            .sesion-text {
+                font-size: 12px;
+                color: white;
+            }
+
+        }
     }
 }
 
