--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -192,3 +192,34 @@ footer {
     color: white;
     margin: 20px 0;
 }
+
+.register {
+    color: white;
+    margin: 20px 0;
+}
+
+.register {
+    color: white;
+    margin: 20px 0;
+}
+
+.register {
+    color: white;
+    margin: 20px 0;
+}
+
+.register {
+    color: white;
+    margin: 20px 0;
+}
+
+.register {
+    color: white;
+    margin: 20px 0;
+}
+
+.register {
+    color: white;
+    margin: 20px 0;
+}
+
