--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -123,7 +123,6 @@
         height: 40vh;
         margin-left: 2%;
         overflow: hidden;
-        /* max-width: 82.5rem; */
 
         .carrusel-titulo {
 
@@ -177,40 +176,22 @@
         }
 
         .arrowRigth {
-            /* right: -30%; */
             right: 2%;
         }
 
         .arrowLeft:active,
         .arrowRigth:active {
             background-color: rgba(128, 128, 128, 0.295);
-            /* animation: deslizar 2s ease-in-out; */
-            /* transition-delay: 2s; */
-        }
-
-        @keyframes deslizar {
-            50% {}
-
         }
 
         .arrowLeft:hover,
         .arrowRigth:hover {
             transform: scale(1.4);
-            /* translate: 30px; */
-
         }
     }
-
 }
 
-/* ------------------------Footer------------------------- */
-
-footer {
-    background-color: var(--dark-shddow);
-    height: 30vh;
-    color: white;
-}
-
+/* -----------------------------------------Sesion Login------------------------------------ */
 .login-container {
     position: fixed;
     top: 50%;
@@ -223,17 +204,21 @@ footer {
 }
 
 .login-box {
-    background-color: rgba(0, 0, 0, 0.85); /* Fondo negro con transparencia */
+    background-color: rgba(0, 0, 0, 0.85);
+    /* Fondo negro con transparencia */
     padding: 30px;
-    border-radius: 12px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra */
+    border-radius: 12px;
+    /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    /* Sombra */
     width: 400px;
     max-width: 90%;
     text-align: center;
 }
 
 .sesion-text {
-    color: #ffffff; /* Texto en blanco */
+    color: #ffffff;
+    /* Texto en blanco */
     font-size: 24px;
     margin-bottom: 20px;
 }
@@ -242,13 +227,15 @@ footer {
     width: 100%;
     padding: 12px;
     margin: 10px 0;
-    border-radius: 8px; /* Bordes redondeados */
+    border-radius: 8px;
+    /* Bordes redondeados */
     border: none;
     font-size: 16px;
 }
 
 .btn-primary {
-    background-color: #8e44ad; /* Color primario */
+    background-color: #8e44ad;
+    /* Color primario */
     color: white;
     padding: 12px;
     width: 100%;
@@ -260,7 +247,8 @@ footer {
 }
 
 .btn-primary:hover {
-    background-color: #732d91; /* Efecto hover */
+    background-color: #732d91;
+    /* Efecto hover */
 }
 
 .social-login {
@@ -282,3 +270,11 @@ footer {
     margin: 20px 0;
 }
 
+
+/* ------------------------Footer------------------------- */
+
+footer {
+    background-color: var(--dark-shddow);
+    height: 30vh;
+    color: white;
+}
