--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -378,7 +378,79 @@
 /* ------------------------Footer------------------------- */
 
 footer {
+    padding: 20px 40px;
     background-color: var(--dark-shddow);
-    height: 30vh;
-    color: white;
+    color: #fff;
+}
+
+.footer-logo {
+    flex: 1;
+    padding: 10px;
+    border-bottom: 1px solid var(--white);
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+}
+
+.word-1, .word-2{
+    display: block;
+    margin-left: 12px;
+}
+
+.logo-pag{
+    width: 4.5vw;
+    height: auto;
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 10px;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-column {
+    padding: 10px;
+} 
+
+.footer-column h4 {
+    margin-top: 29px;
+    font-size: 18px; 
+    margin-bottom: 10px;
+    color: var(--primary-color);
+}
+
+.footer-column ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-column ul li {
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+.footer-column ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-column li{
+    margin-top: 12px;
+}
+
+.footer-column ul li a:hover {
+    text-decoration: underline;
+}
+
+.social-icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.social-icons a {
+    margin-right: 10px;
 }
