--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -107,21 +107,35 @@
         margin-right: 2%;
         margin-left: 10%;
         width: 130px;
-
+          
         .btn-sesion {
-            width: 100%;
-            height: 2.5rem;
-            border-radius: 30px;
-            background-color: var(--primary-color);
-            cursor: pointer;
+            padding: 5px 5px;
+            text-transform: uppercase;
+            border-radius: 80px;
+            font-size: var(--h3);
+            /*font-weight: var(--h3);*/
             color: var(--white);
-
-            .sesion-text {
-                font-size: 14px;
-                color: white;
-            }
-
-        }
+            text-shadow: none;
+            background: var(--primary-color);
+            cursor: pointer;
+            box-shadow: transparent;
+            border: 1px solid var(--primary-color);
+            transition: 0.5s ease;
+            user-select: none;
+            width: 130px;
+            height: 40px;
+          }
+          
+          #btn-sesion:hover,
+          :focus {
+            color: var(--white);
+            background: var(--primary-color);
+            border: 0.5px solid var(--primary-color);
+            text-shadow: 0 0 0.5px var(--white), 0 0 1px var(--white), 0 0 2.5px var(--white);
+            box-shadow: 0 0 1px var(--primary-color), 0 0 2.5px var(--primary-color), 0 0 2px var(--primary-color),
+              0 0 20px var(--ligth-primary);
+          }
+          
     }
 }
 
@@ -285,6 +299,22 @@
         border: none;
         font-size: 20px;
     }
+
+    
+    .btn-sesion {
+        width: 110px; /* ajusta el ancho */
+        height: 35px; /* ajusta la altura */
+        font-size: calc(var(--h3) - 2px); /* reduce el tamaño de la fuente */
+        padding: 4px 4px; /* ajusta el relleno */
+    }
+    
+    #btn-sesion:hover,
+    :focus {
+        text-shadow: 0 0 0.4px var(--white), 0 0 0.8px var(--white), 0 0 2px var(--white);
+        box-shadow: 0 0 0.8px var(--primary-color), 0 0 2px var(--primary-color), 0 0 1.5px var(--primary-color),
+            0 0 18px var(--ligth-primary);
+    }
+    
 
     .btn-primary {
         background-color: var(--primary-color); 
