--- a/TP2/EntregaFinal/css/Style.css
+++ b/TP2/EntregaFinal/css/Style.css
@@ -12,15 +12,27 @@
     --dark-shddow: #4F4F4F;
     --blackish: #767676;
     --gray: #B0AAAA;
+
+    --white: #FFFFFF;
+
+    --font-baloo: 'Baloo Bhai', regular;
+
+    --h1: 18px;
+    --h2: 16px;
+    --h3: 14px;
+    --txt-body: 12px;
+    --txt-no-bold: 10px;
+    --txt-tittle-canva-game: 28px;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Baloo;
+    font-family: var(--font-baloo);
 }
 
+/* -------------------------Header--------------------- */
 .navbar {
     width: 100%;
     height: 4.5rem;
@@ -70,7 +82,7 @@
         border-radius: 30px;
         height: 40px;
         width: 28%;
-        margin-right: 10%;
+        margin-right: 5%;
         /* Buscar otra forma de espaciar */
         display: flex;
 
@@ -94,16 +106,18 @@
     .conteiner-user {
         margin-right: 2%;
         margin-left: 10%;
-        width: 110px;
+        width: 130px;
 
         .btn-sesion {
             width: 100%;
-            height: 35px;
-            border-radius: 30px;
+            height: 2.5rem;
+            border-radius: 80px;
             background-color: var(--primary-color);
+            cursor: pointer;
+            color: var(--white);
 
             .sesion-text {
-                font-size: 12px;
+                font-size: 14px;
                 color: white;
             }
 
@@ -111,13 +125,521 @@
     }
 }
 
-main {
+/* ---------------------------Main--------------------- */
+.galery-game {
     background-color: var(--dark-gray);
-    height: 70vh;
+    height: 100vh;
+
+    .conteiner-carruselPrimary {
+        padding-top: 15px;
+        width: 100%;
+        height: 40vh;
+        margin-left: 2%;
+        overflow: hidden;
+
+        .carrusel-titulo {
+
+            .h2-carrusel {
+                font-size: 1rem;
+                color: #fff;
+                margin-left: 1px;
+            }
+        }
+
+        .carrusel-primary {
+            margin-top: 10px;
+            display: flex;
+            position: relative;
+
+            .card-game {
+                /* max-width: 25rem; */
+
+                .card-img-game {
+                    cursor: pointer;
+                    width: 352px;
+                    height: 12rem;
+                    margin-left: 0.5rem;
+                    object-fit: cover;
+                    /* border-image: fill 0 linear-gradient(#0001, #000);  Es para poner gradient abaajo y resalte el txt */
+                }
+            }
+
+
+            .cardGameSecundary {
+                width: auto;
+                display: flex;
+                display: grid;
+                gap: 4px;
+                grid-template-areas:
+                    "a b"
+                    "c d";
+
+                .a {
+                    grid-area: a;
+                }
+
+                .b {
+                    grid-area: b;
+                }
+
+                .c {
+                    grid-area: c;
+                }
+
+
+                .d {
+                    grid-area: d;
+                }
+
+                .cardSmall-game {
+
+
+                    .card-img-game-small {
+
+                        object-fit: cover;
+                        width: 11rem;
+                        height: 90px;
+                        cursor: pointer;
+
+                    }
+                }
+
+
+            }
+
+
+            .btn-card-game-arrow {
+                background-color: #130f0f0a;
+                border: 0;
+
+                .card-game-arrowL {
+                    transform: rotate(540deg);
+                    margin-top: 16px;
+                }
+            }
+
+            .arrowLeft,
+            .arrowRigth {
+                position: absolute;
+                bottom: 0;
+                top: 0;
+                cursor: pointer;
+            }
+
+            .arrowLeft {
+                left: 2%;
+            }
+
+            .arrowRigth {
+                right: 2%;
+            }
+
+            .arrowLeft:active,
+            .arrowRigth:active {
+                background-color: rgba(128, 128, 128, 0.295);
+            }
+
+            .arrowLeft:hover,
+            .arrowRigth:hover {
+                transform: scale(1.4);
+
+            }
+        }
+    }
 }
 
-footer {
-    background-color: var(--dark-shddow);
-    height: 30vh;
-    color: white;
+/*MOBILE*/
+@media only screen and (max-width: 414px) {
+    .login-container{
+        position: fixed;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+        background-color: #07060600;
+        border: none;
+    }
+
+    .login-box{
+        background-color: black;
+        padding: 32px;
+        border-radius: 50px;
+        width: 360px;
+        text-align: center;
+    }
+
+
+    .sesion-text {
+        color: var(--white);
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
+
+    .inputs {
+        width: 100%;
+        padding: 8px;
+        margin: 10px 0;
+        border-radius: 75px; 
+        border: none;
+        font-size: 20px;
+    }
+
+    .btn-primary {
+        background-color: var(--primary-color); 
+        color: white;
+        padding: 10px;
+        width: 60%;
+        border-radius: 65px;
+        border: none;
+        cursor: pointer;
+        margin: 10px 0;
+        font-size: 20px;
+        transition: background-color 0s ease, transform 0.3s ease;
+    }
+
+    .btn-primary:hover {
+        background-color: var(--shadow-primary); 
+        transform: scale(1.03); 
+    }
+
+    
+    .social-login {
+        align-items: center;
+        justify-content: center;
+        color: var(--white);
+        margin: 10px 0;
+    }
+
+    .txt-login{
+        flex-grow: 1;
+        background-color:
+        var(--white); border: 
+        none; height: 1px;
+    }
+
+    .txt-login2{
+        font-size: 17px;
+        padding: 5px;
+    }
+
+    .img-social {
+        width: 40px;
+        height: 40px;
+        margin: 0 10px;
+    }
+
+    .register {
+        color: var(--white);
+        margin: 5px 0;
+    }
 }
+/* -----------------------------------------Sesion Login------------------------------------ */
+
+
+/*DESKTOP*/
+@media only screen and (min-width: 415px) {
+    .login-container {
+        position: fixed;
+        top:50%;
+        margin-bottom: 30px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        justify-content: center;
+        align-items: center;
+        background-color: #07060600;
+        border: none;
+       
+    }
+
+    .login-box {
+        height: 100%;
+        background-color: var(--black-background-);
+        padding: 35px;
+        border-radius: 12px;
+        box-shadow: var(--black-background-);
+        width: 400px;
+        max-width: 100%;
+        text-align: center;
+        border-radius: 50px;
+    }
+
+    .sesion-text {
+        color: var(--white);
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .inputs {
+        width: 100%;
+        padding: 8px;
+        margin: 10px 0;
+        border-radius: 75px; 
+        border: none;
+        font-size: 16px;
+    }
+
+    .btn-primary {
+        background-color: var(--primary-color);
+        color: var(--white);
+        padding: 12px;
+        width: 60%;
+        border-radius: 65px;
+        border: none;
+        cursor: pointer;
+        margin: 10px 0;
+        font-size: 16px;
+        transition: background-color 0s ease, transform 0.3s ease;
+    }
+
+    .btn-primary:hover {
+        background-color: var(--shadow-primary);
+        transform: scale(1.04);
+    }
+
+    .social-login {
+        align-items: center;
+        justify-content: center;
+        color: white;
+        margin: 15px 0;
+    }
+
+    
+    .img-social {
+        width: 40px;
+        height: 40px;
+        margin: 0 10px;
+    }
+
+    .register {
+        color: rgb(153, 108, 108);
+        margin: 8px 0;
+    }
+
+    .txt-login2 {
+        color: var(--white);
+    }
+
+    .date-birthdate{
+        border-radius: 8px;
+    }
+}
+
+
+/* ------------------------Footer------------------------- */
+
+footer {
+    padding: 20px 40px;
+    background-color: var(--dark-shddow);
+    color: #fff;
+}
+
+.footer-logo {
+    flex: 1;
+    padding: 10px;
+    border-bottom: 1px solid var(--white);
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+}
+
+.word-1,
+.word-2 {
+    display: block;
+    margin-left: 12px;
+}
+
+.logo-pag {
+    width: 4.5vw;
+    height: auto;
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 10px;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-column {
+    padding: 10px;
+}
+
+.footer-column h4 {
+    margin-top: 29px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: var(--primary-color);
+}
+
+.footer-column ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-column ul li {
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+.footer-column ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-column li {
+    margin-top: 12px;
+}
+
+.footer-column ul li a:hover {
+    text-decoration: underline;
+}
+
+.social-icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.social-icons a {
+    margin-right: 10px;
+}
+
+/* ------------------------Screen Juego------------------------- */
+
+.game{
+    background-color: var(--dark-gray);
+    display: flex;
+    flex-direction: column;
+}
+.game-content{
+    position: relative;
+    width: 100%;
+    height: auto;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+    .photo-game img{
+        width: 85%;
+        height: auto;
+        filter: blur(3px);
+        border-radius: 8px;
+    }
+
+    .photo-game{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .elements-canva-game{
+        position: absolute;
+        top: 40%;
+        left: 40%;
+        text-align: center;
+        z-index: 10;
+        color: var(--white);
+    }
+
+    .btn-play{
+            width: 50%;
+            height: 2.5rem;
+            border-radius: 80px;
+            background-color: var(--primary-color);
+            cursor: pointer;
+            color: var(--white);
+            margin-top: 1rem;
+    }
+
+}
+
+.info-game{
+    background-color: var(--dark-shddow);
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    align-items: center;
+    border-radius: 8px;
+    margin-top: 0;
+    color: var(--white);  
+    margin-left: 8.5rem;  
+
+    .logo-pag{
+        margin-top: 0.5rem;
+        margin-left: 1rem;
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    .title-game{
+        text-align: center;
+        margin-left: 1rem;
+    }
+
+    .feedback{
+        margin-right:1rem;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .btn-feedback{
+        color: var(--white);
+        background-color: var(--dark-shddow);
+        border: none;
+        padding: 0.3rem;
+        transition: transform 0.2s ease-in-out, background-color 0.3s ease;
+        display: flex;
+        align-items: center;
+    }
+
+    .btn-feedback span{
+        padding:0.3rem;
+    }
+
+    .icons-fdb{
+        
+    }
+
+    .btn-feedback:hover{
+        background-color:var(--blackish);
+        border-radius: 8px;
+        transform: translateY(-2px);
+    }
+
+    
+
+}
+
+
+.breadcrumb {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:start;
+    padding: 10px 0;
+    font-size: 14px;
+    color: var(--white);
+    margin-left: 8.6rem;
+  }
+
+  .breadcrumb a {
+    text-decoration: none;
+    color: #fff; /* Color de los enlaces */
+    margin-right: 5px;
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .breadcrumb a:hover {
+    text-decoration: underline;
+    transform: translateY(-1px);
+
+  }
+
+
+
+
+
