--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -93,7 +93,7 @@
 
         .nav-inputText {
             width: 100%;
-            height: 1.8rem;
+            height: 2rem;
             background-color: var(--black-background-);
             border: 2px solid black;
         }
@@ -107,45 +107,33 @@
         margin-right: 2%;
         margin-left: 10%;
         width: 130px;
-          
+
         .btn-sesion {
-           padding: 5px 5px;
-           text-transform: uppercase;
+            width: 100%;
+            height: 2.5rem;
             border-radius: 80px;
-            font-size: var(--h3);
-            color: var(--white);
-            background: var(--primary-color);
+            background-color: var(--primary-color);
             cursor: pointer;
-            box-shadow: transparent;
-            border: 1px solid var(--primary-color);
-            transition: 0.5s ease;
-            user-select: none;
-            width: 130px;
-            height: 40px;
-          }
-          
-          #btn-sesion:hover,
-          :focus {
             color: var(--white);
-            background: var(--primary-color);
-            border: 0.5px solid var(--primary-color);
-            text-shadow: 0 0 0.5px var(--white), 0 0 1px var(--white), 0 0 2.5px var(--white);
-            box-shadow: 0 0 1px var(--primary-color), 0 0 2.5px var(--primary-color), 0 0 2px var(--primary-color),
-              0 0 20px var(--ligth-primary);
-          }
-          
+
+            .sesion-text {
+                font-size: 14px;
+                color: white;
+            }
+
+        }
     }
 }
 
 /* ---------------------------Main--------------------- */
 .galery-game {
     background-color: var(--dark-gray);
-    /*height: 100vh;*/
+    height: 100vh;
 
     .conteiner-carruselPrimary {
         padding-top: 15px;
         width: 100%;
-        height: 52%;
+        height: 40vh;
         margin-left: 2%;
         overflow: hidden;
 
@@ -162,19 +150,16 @@
             margin-top: 10px;
             display: flex;
             position: relative;
-            height: 80%;
-            margin: 10px;
 
             .card-game {
                 /* max-width: 25rem; */
 
                 .card-img-game {
                     cursor: pointer;
-                    width: 409px;
-                    height: 230px;
+                    width: 352px;
+                    height: 12rem;
                     margin-left: 0.5rem;
                     object-fit: cover;
-                    border-radius: 8px;
                     /* border-image: fill 0 linear-gradient(#0001, #000);  Es para poner gradient abaajo y resalte el txt */
                 }
             }
@@ -182,29 +167,44 @@
 
             .cardGameSecundary {
                 width: auto;
+                display: flex;
                 display: grid;
-                height: 100%;
                 gap: 4px;
                 grid-template-areas:
                     "a b"
                     "c d";
 
-                .a, .b, .c, .d {
-                    margin: 4px; /* Asegúrate de que no haya márgenes adicionales */
-                    padding: 0 4px;
+                .a {
+                    grid-area: a;
                 }
-            
+
+                .b {
+                    grid-area: b;
+                }
+
+                .c {
+                    grid-area: c;
+                }
+
+
+                .d {
+                    grid-area: d;
+                }
+
                 .cardSmall-game {
-                    margin: 0px; /* Elimina márgenes adicionales en los "cards" */
-                    padding: 4px;
-                    height: 109px;
+
+
                     .card-img-game-small {
+
                         object-fit: cover;
-                        width: 200px;
-                        height: 108px; /* Mantener una altura consistente */
+                        width: 11rem;
+                        height: 90px;
                         cursor: pointer;
+
                     }
                 }
+
+
             }
 
 
@@ -218,6 +218,7 @@
                 }
             }
 
+            .arrowLeft,
             .arrowRigth {
                 position: absolute;
                 bottom: 0;
@@ -284,22 +285,6 @@
         border: none;
         font-size: 20px;
     }
-
-    
-    .btn-sesion {
-        width: 110px; 
-        height: 35px; 
-        font-size: calc(var(--h3) - 2px); 
-        padding: 4px 4px;
-    }
-    
-    #btn-sesion:hover,
-    :focus {
-        text-shadow: 0 0 0.8px var(--white), 0 0 0.18px var(--white), 0 0 4px var(--white);
-        box-shadow: 0 0 0.16px var(--primary-color), 0 0 4px var(--primary-color), 0 0 3px var(--primary-color),
-            0 0 25px var(--ligth-primary);
-    }
-    
 
     .btn-primary {
         background-color: var(--primary-color); 
@@ -439,121 +424,9 @@
     .date-birthdate{
         border-radius: 8px;
     }
-
-/* preloader de la pagina */ 
-    .loader {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        gap: 5px;
-    }
-  
-    .loading-text {
-        color: white;
-        font-size: 14pt;
-        font-weight: 600;
-        margin-left: 10px;
-    }
-
-    .dot {
-        margin-left: 3px;
-        animation: blink 1.5s infinite;
-    }
-    .dot:nth-child(2) {
-        animation-delay: 0.3s;
-    }
-
-    .dot:nth-child(3) {
-        animation-delay: 0.6s;
-    }
-
-    .loading-bar-background {
-        --height: 30px;
-        display: flex;
-        align-items: center;
-        box-sizing: border-box;
-        padding: 5px;
-        width: 200px;
-        height: var(--height);
-        background-color: #212121 /*change this*/;
-        box-shadow: #0c0c0c -2px 2px 4px 0px inset;
-        border-radius: calc(var(--height) / 2);
-    }
-
-    .loading-bar {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        --height: 20px;
-        width: 0%;
-        height: var(--height);
-        overflow: hidden;
-        background: rgb(222, 74, 15);
-        background: linear-gradient(
-            0deg,
-            rgba(222, 74, 15, 1) 0%,
-            rgba(249, 199, 79, 1) 100%
-        );
-        border-radius: calc(var(--height) / 2);
-        animation: loading 4s ease-out infinite;
-    }
-
-    .white-bars-container {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        gap: 18px;
-    }
-
-    .white-bar {
-        background: rgb(255, 255, 255);
-        background: linear-gradient(
-            -45deg,
-            rgba(255, 255, 255, 1) 0%,
-            rgba(255, 255, 255, 0) 70%
-    );
-        width: 10px;
-        height: 45px;
-        opacity: 0.3;
-        rotate: 45deg;
-    }
-
-    @keyframes loading {
-    0% {
-        width: 0;
-    }
-    80% {
-        width: 100%;
-    }
-    100% {
-        width: 100%;
-    }
-    }
-
-    @keyframes blink {
-    0%,
-    100% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    }
-
-    .hidden{
-        overflow: hidden;
-    }
-
-    .centrado{
-        background-color: var(--black-background-);
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }  
 }
+
+
 /* ------------------------Footer------------------------- */
 
 footer {
@@ -634,7 +507,6 @@ footer {
 .social-icons a {
     margin-right: 10px;
 }
-
 
 /* ------------------------Screen Juego------------------------- */
 
@@ -762,3 +634,8 @@ footer {
     transform: translateY(-1px);
 
   }
+
+
+
+
+
