--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -600,6 +600,10 @@ footer {
         padding:0.3rem;
     }
 
+    .icons-fdb{
+        
+    }
+
     .btn-feedback:hover{
         background-color:var(--blackish);
         border-radius: 8px;
