--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -58,14 +58,14 @@ body{
 
     }
     .btn-hamburguesa:active {
-        transform: scale(0.5);
+        transform: scale(2);
         transition: 0.2s;
     }
     
     .nabvar-hamburguesa {
         width: 5%;
         height: 3rem;
-        padding: 5px 20px 0px 20px;
+        padding: 20px 20px 0px 20px;
         cursor: pointer;
 
 
@@ -115,7 +115,7 @@ body{
 
         .nav-inputText {
             width: 100%;
-            height: 2rem;
+            height: 1.8rem;
             background-color: var(--black-background-);
             border: 2px solid black;
         }
@@ -217,9 +217,10 @@ body{
     }
 
     .conteiner-carruselPrimary {
-        padding-top: 15px;
-        height: 40vh;
-        margin-left: 2%;
+        padding-top: 40px;
+        width: 100%;
+        height: 52%;
+        margin-left: 1%;
         overflow: hidden;
 
         .carrusel-titulo {
@@ -237,16 +238,15 @@ body{
             position: relative;
 
             .card-game::before {
-                height: 29px;
+                width: 142px;
                 position: absolute;
                 content: "Jugar gratis";
                 text-align: center;
-                color: white;
+                color: var(--white);
                 border-radius: 8px;
                 bottom: 8px;
-                width: 35%;
                 padding-top: 5px;
-                left: 65%;
+                right: 0px;
                 background-color: var(--black-background-);
             }
 
@@ -254,20 +254,19 @@ body{
                 position: relative;
                 .card-img-game {
                     cursor: pointer;
-                    width: 352px;
-                    height: 12rem;
+                    width: 409px;
+                    height: 230px;
                     margin-left: 0.5rem;
                     object-fit: cover;
-                    /* border-image: fill 0 linear-gradient(#0001, #000);  Es para poner gradient abaajo y resalte el txt */
+                    border-radius: 8px;
                 }
             }
 
 
             .cardGameSecundary {
                 width: auto;
-                display: flex;
                 display: grid;
-                gap: 4px;
+                gap: 10px;
                 grid-template-areas:
                     "a b"
                     "c d";
@@ -307,8 +306,8 @@ body{
 
                     .card-img-game-small {
                         object-fit: cover;
-                        width: 11rem;
-                        height: 90px;
+                        width: 200px;
+                        height: 108px;
                         cursor: pointer;
                     }
                 }
