--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -41,6 +41,12 @@ body{
 }
 
 /* -------------------------Header--------------------- */
+.navbar-contenedor {
+    padding: 0 20px; /* ajusta el valor de 20px según tus necesidades */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .navbar {
     width: 100%;
     height: 4.5rem;
@@ -51,6 +57,7 @@ body{
     position: fixed;
     top: 0;
     z-index: 4;
+    padding: 0px;
 
     .btn-hamburguesa:hover {
         transform: scale(1.1);
@@ -124,7 +131,7 @@ body{
             margin-left: 10px;
         }
     }
-
+/*
     .conteiner-user {
         margin-right: 2%;
         margin-left: 10%;
@@ -157,6 +164,99 @@ body{
           }
           
     }
+          */
+           
+    .pushable {
+        position: relative;
+        background: transparent;
+        margin-right: 10px;
+        width: 130px;
+    height: 40px;
+        padding: 0px;
+        border: none;
+        cursor: pointer;
+        outline-offset: 4px;
+        outline-color: deeppink;
+        transition: filter 250ms;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
+    
+    .shadow {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: hsl(226, 25%, 69%);
+        border-radius: 8px;
+        filter: blur(2px);
+        will-change: transform;
+        transform: translateY(2px);
+        transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+    }
+    
+    .edge {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: 8px;
+        background: linear-gradient(
+        to right,
+        hsl(248, 39%, 39%) 0%,
+        hsl(248, 39%, 49%) 8%,
+        hsl(248, 39%, 39%) 92%,
+        hsl(248, 39%, 29%) 100%
+        );
+    }
+    
+    .front {
+        display: flex;
+        width: 130px;
+        height: 40px;
+        padding: 0; /* elimina el padding para que el tamaño sea exacto */
+        position: relative;
+        border-radius: 8px;
+        background: hsl(248, 53%, 58%);
+        padding: 16px 32px;
+        color: white;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        font-size: 1rem;
+        transform: translateY(-4px);
+        transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+    }
+    
+    .pushable:hover {
+        filter: brightness(110%);
+    }
+    
+    .pushable:hover .front {
+        transform: translateY(-6px);
+        transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+    }
+    
+    .pushable:active .front {
+        transform: translateY(-2px);
+        transition: transform 34ms;
+    }
+    
+    .pushable:hover .shadow {
+        transform: translateY(4px);
+        transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+    }
+    
+    .pushable:active .shadow {
+        transform: translateY(1px);
+        transition: transform 34ms;
+    }
+    
+    .pushable:focus:not(:focus-visible) {
+        outline: none;
+    }
+    
 }
 
 /* ---------------------------Main--------------------- */
@@ -228,7 +328,7 @@ body{
             .h2-carrusel {
                 font-size: 1rem;
                 color: #fff;
-                margin-left: 1px;
+                margin-left: 9px;
             }
         }
 
@@ -238,6 +338,7 @@ body{
             position: relative;
 
             .card-game::before {
+
                 width: 142px;
                 position: absolute;
                 content: "Jugar gratis";
