--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -316,6 +316,7 @@ body{
                         height: 108px;
                         cursor: pointer;
                         margin-right: 10px;
+                        border-radius: 8px;
                     }
                 }
             }
