--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -129,7 +129,7 @@ body{
     .btn {
         position: relative;
         display: inline-block;
-        margin: 15px;
+        margin: 12px;
         padding: 5px 15px;
         text-align: center;
         font-size: 18px;
@@ -139,7 +139,6 @@ body{
         background: var(--primary-color);
         cursor: pointer;
         transition: ease-out 0.3s;
-        border: 0.1px solid var(--white);
         border-radius: 80px;
         font-size: var(--h2);
         box-shadow: inset 0 0 0 0 var(--ligth-primary-2);
@@ -489,7 +488,7 @@ body{
     }
 
     .login-box {
-        height: 105vh;
+        
         margin: 2% auto;
         background-color: var(--black-background-);
         padding: 35px;
@@ -502,13 +501,16 @@ body{
     }
 
     .button-close {
-        position: relative;
+        position: absolute;
         width: 2.5em;
         height: 2.5em;
         border: none;
         background: rgba(180, 83, 107, 0.11);
         border-radius: 5px;
         transition: background 0.5s;
+        margin-bottom: auto;
+        margin-left: 290px;
+        margin-bottom: 60px;
     }
     
     .X {
@@ -545,7 +547,7 @@ body{
         width: 3em;
         height: 1.7em;
         font-size: 12px;
-        background-color: rgb(19, 22, 24);
+        background-color: var(--black-background-);
         color: rgb(187, 229, 236);
         border: none;
         border-radius: 3px;
